--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 
   </head>
 
